--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -2762,6 +2762,44 @@ class CloudManager {
         }
     }
 
+
+    // Fallback method to save into the 'app-xxx' folder if /Documents is blocked
+    static async uploadToSandbox(id, data) {
+        try {
+            const fileName = this.getFileName(id);
+            await puter.fs.write(fileName, JSON.stringify(data));
+            console.log("⚠️ Saved to Sandbox (Only available on this device)");
+            return true;
+        } catch (e) {
+            return false;
+        }
+    }
+
+    static async download(id) {
+        try {
+            if (typeof puter === 'undefined') return null;
+
+            const fileName = this.getFileName(id);
+            const globalPath = `/Documents/MegaMinerSaves/${fileName}`;
+
+            let fileItem;
+            try {
+                // Try global first
+                fileItem = await puter.fs.read(globalPath);
+            } catch (e) {
+                // Fallback to sandbox
+                fileItem = await puter.fs.read(fileName);
+            }
+
+            const content = await fileItem.text();
+            return JSON.parse(content);
+        } catch (err) {
+            if (err.code === 404) return null;
+            console.error("Cloud Download Failed:", err);
+            return null;
+        }
+    }
+
     static async upload(id, data) {
         try {
             const fileName = this.getFileName(id);
