--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/png" href="img/amogus.png">
     <title>Mega Miner Online</title>
     <!-- TODO: move this to a shared dir for the other programs -->
-    <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
-    <script src="https://js.puter.com/v2/"></script>
+    <script src="lib/mqtt.min.js"></script>
+    <script src="lib/puter-v2.min.js"></script>
     <style>
         /* CSS Reset & Normalization */
         * { box-sizing: border-box; margin: 0; padding: 0; outline: none; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
